test/extended/util/compat_otp/testdata/networking/networkpolicy/allow-egress-red.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-red
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          team: qe
      podSelector:
        matchLabels:
          type: red
  policyTypes:
  - Egress
