test/extended/util/compat_otp/testdata/networking/networkpolicy/allow-from-all-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-all-namespaces
spec:
  podSelector: {}
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
      from:
        - namespaceSelector: {}
  policyTypes:
    - Ingress
