test/extended/util/compat_otp/testdata/networking/networkpolicy/allow-ingress-red.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-to-red
spec:
  podSelector:
    matchLabels:
      type: red
  ingress:
  - {}
