test/extended/util/compat_otp/testdata/networking/networkpolicy/allow-sctpclient.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allowsctpclient
spec:
  podSelector:
    matchLabels:
      name: sctpserver
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: sctpclient
    ports:
    - protocol: SCTP
      port: 30102
