test/extended/util/compat_otp/testdata/networking/networkpolicy/allow-to-all-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-all-namespaces
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 8080
      to:
        - namespaceSelector: {}
  policyTypes:
    - Egress
