test/extended/util/compat_otp/testdata/networking/networkpolicy/allow-to-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-same-namespace
spec:
  egress:
  - to:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Egress
