test/extended/util/compat_otp/testdata/networking/networkpolicy/default-allow-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-egress
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
  - Egress
