test/extended/util/compat_otp/testdata/networking/networkpolicy/default-deny-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
