test/extended/util/compat_otp/testdata/networking/networkpolicy/egress-allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-egress
spec:
  podSelector:
    matchLabels:
      name: test-pods
  egress:
    - {}
  ingress:
    - {}
  policyTypes:
    - Egress
    - Ingress
