test/extended/util/compat_otp/testdata/networking/networkpolicy/ingress-allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all-ingress
spec:
  podSelector:
    matchLabels:
      name: hellosdn
  ingress:
    - {}
  policyTypes:
    - Ingress
