test/extended/util/compat_otp/testdata/networking/networkpolicy/netpol-30920-75540.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: OCPBUGS-30920
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: name
          operator: In
          values:
          - invalid value
  podSelector: {}
  policyTypes:
  - Ingress
